--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -43,20 +43,16 @@ body {
   display: flex;
   justify-content: space-between;
   margin-left: auto;
-
-
   align-items: center;
 
 }
-
-.header-nav-menu {
-  
-  padding: 10px 20px;
+.header-nav-menu{
   display: flex;
-  list-style: none;
-
-
+    list-style: none;
+    align-items: center;
+    padding: 8px;
 }
+
 
 .header-nav-menu-item {
   margin: 0 15px;
@@ -68,6 +64,8 @@ body {
   text-decoration: none;
   font-size: 16px;
   transition: color 0.3s ease;
+  display: flex;
+  align-items: center;
 }
 
 .header-nav-link:hover {
@@ -76,7 +74,7 @@ body {
 }
 
 .header-nav-menu-item-username {
-  margin: 0 15px;
+  margin: 10px 15px;
   font-weight: bold;
 }
 
@@ -101,10 +99,10 @@ body {
   transition: background-color 0.3s ease;
 }
 
-<<<<<<< HEAD
-.header-logout-desktop-btn:hover {
-  background-color: #c0392b;
-=======
+.header-logout-desktop-btn:hover{
+  color: #ffbb33;
+}
+
 .nav-menu-item-username {
   font-family: 'Roboto';
   text-decoration: none;
@@ -112,7 +110,6 @@ body {
   font-weight: 600;
   font-size: 18px;
   color: #d0b200;
->>>>>>> 796b8704f5b8cd0d93fa4a9db47c46ab4f09720a
 }
 
 /* Mobile Menu */
@@ -204,6 +201,10 @@ body {
     font-size: 18px; /* Larger font size for mobile */
   }
 
+  .header-nav-menu-item-username {
+    margin: 0px 30px -37px 30px;
+    font-weight: bold;
+}
   .header-logout-mobile-btn {
     margin-top: 10px;
   }
