respovie UI - done

--- a/src/components/Enquiries/Enquiries.css
+++ b/src/components/Enquiries/Enquiries.css
@@ -1,4 +1,29 @@
-.enquiries-page-container{
+/* Enquiries.css */
+.enquiries-page-container {
     display: flex;
-    flex-direction: row;
+    min-height: 100vh;
+
+    font-family: 'Poppins', sans-serif;
+    overflow-x: hidden; /* Prevents horizontal scrolling */
+}
+
+/* Main content */
+.enquiries-page-container h1 {
+    font-size: 24px;
+    font-weight: bold;
+    text-align: center;
+    margin: auto;
+}
+
+/* Responsive Design */
+@media (max-width: 768px) {
+    .enquiries-page-container {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
+
+    .enquiries-page-container h1 {
+        font-size: 20px;
+    }
 }
