--- a/src/components/ViewDetails/ViewDetails.css
+++ b/src/components/ViewDetails/ViewDetails.css
@@ -50,6 +50,7 @@ header {
 
 .gallery {
     flex: 1;
+    padding-top: 20px;
     display: grid;
     grid-template-columns: 400px 200px; /* 1 column for the large image and 1 column for the small images */
     gap: 10px;
@@ -57,7 +58,7 @@ header {
 }
 
 .gallery img {
-    width: 100%;
+    width: 90%;
     border-radius: 8px;
     cursor: pointer;
 }
