--- a/src/components/SentChatRequestItem/SentChatRequestItem.css
+++ b/src/components/SentChatRequestItem/SentChatRequestItem.css
@@ -6,6 +6,8 @@
     background-color: white;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     transition: transform 0.2s ease-in-out;
+   margin-left: 200px;
+   margin-right: -190px;
 }
 .card button{
     margin: 15px;
@@ -22,9 +24,13 @@
     color: #555;
 }
 
+.card h4{
+    color: black !important;
+}
+
 .card p {
     margin: 0;
-    color: #777;
+    color: black;
     font-size: 14px;
 }
 .send-message-btn{
@@ -38,7 +44,7 @@
     border-radius: 8px;
 }
 .card-header-one{
-    background-color: #F2D26C ;
+    background-color: #D4AF37 ;
     padding: 15px;
     height: auto;
 }
@@ -57,7 +63,7 @@
     padding: 5px;
     width: 20px;
     height: 20px;
-    background-color: #F2D26C;
+    background-color: #F2D26C !important;
     border-radius: 50%;
 }
 .card-body{
@@ -71,8 +77,8 @@
 .chat-msg-icon{
     font-size: 24px;
 }
-.chat-msg-btn{
-    background-color: #D4AF37;
+.chat-message-btn{
+    background-color: #D4AF37 !important;
     display: block;
     width: 90px !important;
     color: #fff;
@@ -81,6 +87,7 @@
     font-size: 15px;
     border-radius: 8px;
 }
+
 .property-box{
     border: 0.5px ridge gray;
     width: 270px;
@@ -94,9 +101,7 @@
 .compass, .building, .bathroom,.parking{
     margin-top: 20px;
 }
-/* .parking{
-    margin: 20px 0px 0px 15px;
-} */
+
 .icon-paragraph{
     display: flex;
     padding: 3px;
@@ -111,11 +116,247 @@
 .property-sub-box2{
     display: flex;
 }
-.heart{
+/* .heart{
     border: 1px solid gray;
     width: 50px;
     height: 25px;
     border-radius: 4px;
     padding: 5px;
+    font-size: 10px;
     margin: 15px 0px 0px 15px;
+} */
+
+@media (max-width: 1280px) {
+    .card {
+        border: 1px solid #ddd;
+        border-radius: 8px;
+        width: 500px;
+        padding: 0;
+        background-color: white;
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        transition: transform 0.2s ease-in-out;
+        margin-left: 100px;
+        margin-right: -100px;
+    }
+}
+
+@media (max-width: 1074px) {
+    .card {
+        width: 90%;
+        max-width: 500px;
+        margin: 30px -40px 30px 40px;
+    }
+
+    .card-header-two {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
+
+    .card-body {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .card-body img {
+        width: 100%;
+        max-width: 250px;
+        height: auto;
+    }
+
+    .property-box {
+        max-width: 90%;
+        margin: 10px auto;
+    }
+}
+
+@media (max-width: 992px) {
+    .card {
+        width: 90%;
+        max-width: 500px;
+        margin: 30px -40px 30px 30px;
+    }
+
+    .card-header-two {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
+
+    .card-body {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .card-body img {
+        width: 100%;
+        max-width: 250px;
+        height: auto;
+    }
+
+    .property-box{
+        border: 0.5px ridge gray;
+        width: 270px;
+        height: 150px;
+        margin-left: 12px;
+        padding: 3px;
+    }
+}
+@media (max-width: 662px)  {
+    .card {
+        width: 90%;
+        max-width: 500px;
+        margin-left: 50px;
+    }
+
+    .card-header-two {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
+
+    .card-body {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .card-body img {
+        width: 100%;
+        max-width: 250px;
+        height: auto;
+    }
+
+    .property-box{
+        border: 0.5px ridge gray;
+        width: 270px;
+        height: 150px;
+        margin-left: 12px;
+        padding: 3px;
+    }
+}
+@media (max-width: 962px)  {
+    .card {
+        width: 90%;
+        max-width: 500px;
+        margin-left: 50px;
+    }
+
+    .card-header-two {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
+
+    .card-body {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .card-body img {
+        width: 100%;
+        max-width: 250px;
+        height: auto;
+    }
+
+    .property-box{
+        border: 0.5px ridge gray;
+        width: 270px;
+        height: 150px;
+        margin-left: 12px;
+        padding: 3px;
+    }
+}
+@media (max-width: 767px) {
+    .card {
+        width: 90%;
+        max-width: 500px;
+        margin: 30px -40px 30px 40px;
+    }
+
+    .card-header-two {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
+
+    .card-body {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .card-body img{
+        width: 200px;
+        height: 150px;
+    }
+
+    .property-box{
+        border: 0.5px ridge gray;
+        width: 270px;
+        height: 150px;
+        padding: 3px;
+    }
+}
+@media (max-width: 576px) {
+    .card {
+        width: 90%;
+        padding: 10px;
+    }
+
+    .card-header-one, .card-header-two {
+        text-align: center;
+    }
+
+    .card-body {
+        flex-direction: column;
+    }
+
+    .card-body img{
+        width: 200px;
+        height: 150px;
+    }
+
+    .chat-message-btn, .send-message-btn {
+        width: 100%;
+        font-size: 13px;
+    }
+
+    .property-box{
+        border: 0.5px ridge gray;
+        width: 270px;
+        height: 150px;
+        padding: 3px;
+    }
+}
+@media (max-width: 480px) {
+    .card {
+        width: 90%;
+        padding: 10px;
+        margin-left: 10px;
+    }
+
+    .card-header-one, .card-header-two {
+        text-align: center;
+    }
+
+    .card-body {
+        flex-direction: column;
+    }
+
+    .card-body img {
+        width: 100%;
+        max-width: 150px;
+    }
+
+    .property-box {
+        width: 100%;
+        max-width: 80%;
+        margin-left: 25px;
+    }
+
+    .chat-message-btn, .send-message-btn {
+        width: 100%;
+        font-size: 13px;
+    }
+
+   
 }
