--- a/src/components/ProfileSidebar/ProfileSidebar.css
+++ b/src/components/ProfileSidebar/ProfileSidebar.css
@@ -33,7 +33,11 @@
     width: 250px;
     border-radius: 5px;
 }
-manage-acccount-paragraph{
+.manage-acccount-paragraph{
     font-size: 14px;
     margin-left: 5px;
+    margin-bottom: 5px;
+}
+.sidebar-buttons-container{
+    margin-top: 10px;
 }
