--- a/src/components/PropertiesPage/PropertiesPage.css
+++ b/src/components/PropertiesPage/PropertiesPage.css
@@ -178,6 +178,7 @@
   }
   
   .propertiespage-action-buttons button {
+    text-decoration: none;
     padding: 10px 15px;
     font-size: 14px;
     color: var(--white);
@@ -185,6 +186,7 @@
     border-radius: 4px;
     cursor: pointer;
     transition: background-color 0.3s ease;
+    background-color: var(--gold-dark);
   }
   
   .propertiespage-view-details {
