--- a/src/components/ProfileSidebar/ProfileSidebar.css
+++ b/src/components/ProfileSidebar/ProfileSidebar.css
@@ -14,7 +14,7 @@
 .manage-acccount-paragraph {
     font-size: 18px;
     font-weight: bold;
-    color: #f5b642; /* Gold color */
+    color: var(--gold); /* Gold color */
     text-align: center;
     margin-bottom: 10px;
 }
@@ -23,7 +23,7 @@ hr {
     width: 100%;
     border: none;
     height: 2px;
-    background-color: #f5b642; /* Gold line */
+    background-color: var(--gold); /* Gold line */
     margin-bottom: 15px;
 }
 
@@ -39,7 +39,7 @@ hr {
     margin: 5px 0;
     background-color: transparent;
     
-    border: 2px solid #f5b642; /* Gold border */
+    border: 1px solid var(--gold); /* Gold border */
     font-size: 16px;
     cursor: pointer;
     text-align: left;
@@ -48,13 +48,13 @@ hr {
 }
 
 .sidebar-button:hover {
-    background-color: #f5b642; /* Gold */
+    background-color: var(--gold); /* Gold */
     color: #1c1c1c;
     font-weight: bold;
 }
 
 .active {
-    background-color: #f5b642; /* Gold */
+    background-color: var(--gold-dark); /* Gold */
     color: #1c1c1c;
     font-weight: bold;
 }
@@ -101,14 +101,3 @@ hr {
         border-bottom: 2px solid #f5b642;
     }
 }
-<<<<<<< HEAD
-.manage-acccount-paragraph{
-    font-size: 14px;
-    margin-left: 5px;
-    margin-bottom: 5px;
-}
-.sidebar-buttons-container{
-    margin-top: 10px;
-}
-=======
->>>>>>> 3da117387ed17f104320fde87d6d9f2de621cf5a
